*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -117,6 +117,8 @@ vendeurArticles.articlesEnAttente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesEnVente.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.noArticle=Aucun article trouvé.
 vendeurArticles.articlesVendus.vente.titre=Informations vente
+vendeurArticles.articlesVendus.avis.titre=Avis
+vendeurArticles.articlesVendus.avis.noAvis=Pas d'avis
 vendeurArticles.link.modifier=Modifier
 vendeurArticles.link.retirer=Retirer
 vendeurArticles.link.mettreEnVente=Mettre en vente
