*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -35,7 +35,7 @@ boutton.recherche.article=Rechercher
 # Erreurs Resources
 erreurs.titre=Erreur !
 errors.header=<font color="red"><b>Erreur(s)</b></font><br /><br />
-errors.footer=<br /><br /><center><hr width="25%" color="red" size="1" /></center>
+errors.footer=<br /><center><hr width="25%" color="red" size="1" /></center><br />
 
 
 # -- header.jsp --
@@ -71,7 +71,7 @@ inscription.label.ville=Ville
 inscription.label.pays=Pays
 inscription.label.telephonefixe=Téléphone (fixe)
 inscription.label.telephoneportable=Téléphone (portable)
-inscription.label.dateNaissance=Date de naissance (jj/mm/aaaa)
+inscription.label.dateNaissance=Date de naissance <br /> (jj/mm/aaaa)
 
 inscription.erreur.nom.obligatoire=<li>Le champ Nom est obligatoire</li>
 inscription.erreur.prenom.obligatoire=<li>Le champ Prénom est obligatoire</li>
@@ -200,7 +200,7 @@ articleEdit.modele=Modèle
 articleEdit.prixVente=Prix de Vente
 articleEdit.anneeFabrication=Année de Fabrication
 articleEdit.nbJoursValidite=Validite
-articleEdit.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
+articleEdit.dateLimite=Date Limite<br />(jj/mm/aaaa - hh:mm:ss)
 articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
 
@@ -236,7 +236,7 @@ articleFiche.anneeFabrication=Année de Fabrication
 articleFiche.dateLimite=Date Limite
 articleFiche.description=Description
 articleFiche.categorie=Catégorie
-articleFiche.encheres.historique=Historiques
+articleFiche.encheres.historique=Historique
 articleFiche.encheres.libelle=Enchère(s)
 articleFiche.derniereEnchere.titre=Dernère enchère
 articleFiche.derniereEnchere.encherisseur=Enchérisseur
@@ -263,6 +263,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
+membreFiche.mesArticles=Mes autres articles en vente
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
@@ -276,6 +277,7 @@ rechercheArticle.dateLimite=Date Limite (inférieur ou égale)
 rechercheArticle.anneeFabrication=Année de Fabrication (supérieure ou égale)
 rechercheArticle.nbArticles=Nombre d'article(s) trouvé(s) 
 rechercheArticle.noArticle=Aucun article trouvé
+
 
 # -- enchereEdit.jsp -- 
 articleEnchereEdit.titre=Enchérir
