*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -263,7 +263,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
-membreFiche.mesArticles=Mes autres articles en vente
+membreFiche.mesArticles=Mes articles en vente
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
