--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -24,8 +24,8 @@ link.annuler=Annuler
 link.monEzBay=MonEzBay
 link.articleFiche=Fiche article
 link.articleEncherir=Enchérir
-
-
+link.fermerSession=Fermer la session
+link.ouvrirSession=Ouvrir la session
 # Label Boutons
 bouton.label.valider=Valider
 bouton.label.annuler=Annuler
@@ -263,7 +263,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
-membreFiche.mesArticles=Mes articles en vente
+membreFiche.mesArticles=Articles en vente
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
