--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -25,7 +25,7 @@ link.monEzBay=MonEzBay
 link.articleFiche=Fiche article
 link.articleEncherir=Enchérir
 link.fermerSession=Fermer la session
-link.ouvrirSession=Ouvrir la session
+link.ouvrirSession=Ouvrir une session
 # Label Boutons
 bouton.label.valider=Valider
 bouton.label.annuler=Annuler
