--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -190,6 +190,8 @@ articleList.anneeFabrication=Année
 articleList.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
 articleList.dateLimiteSimple=Date Limite
 articleList.noArticle=Aucun article trouvé.
+articleList.transaction.avis= Avis
+articleList.transaction.dateAcquisition=Date d'acquisition
 
 # -- articleEdit.jsp --
 articleEdit.title=Ajout d'un article
@@ -264,6 +266,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
 membreFiche.mesArticles=Articles en vente
+membreFiche.mesAvis=Les avis reçus
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
