--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -77,7 +77,7 @@ inscription.erreur.nom.obligatoire=<li>Le champ Nom est obligatoire</li>
 inscription.erreur.prenom.obligatoire=<li>Le champ Prénom est obligatoire</li>
 inscription.erreur.pseudo.obligatoire=<li>Le champ Pseudo est obligatoire</li>
 inscription.erreur.password.obligatoire=<li>Le champ Mot de passe est obligatoire</li>
-inscription.erreur.password2.obligatoire=<li>Le champ Vérification Mot de passe est obligatoire</li>
+inscription.erreur.password2.obligatoire=<li>Le champ Vérification du Mot de passe est obligatoire</li>
 inscription.erreur.email.obligatoire=<li>Le champ E-mail est obligatoire</li>
 inscription.erreur.email.invalide=<li>Le champ E-mail est invalide</li>
 inscription.erreur.adresse.obligatoire=<li>Le champ Adresse est obligatoire</li>
@@ -89,7 +89,7 @@ inscription.erreur.dateNaissance.obligatoire=<li>Le champ Date de naissance est 
 inscription.erreur.dateNaissance.badFormat=<li>la date doit être de la forme jj/mm/aaaa</li>
 inscription.erreur.password.confirmation=<li>Erreur de mot de passe</li>
 inscription.erreur.pseudoDejaUtilise=<li>Le pseudo est déjà utilisé</li>
-inscription.erreur.telephone.obligatoire=<li>Au moins l'un des 2 champs téléphone doit être rempli.</li>
+inscription.erreur.telephone.obligatoire=<li>Au moins l'un des 2 champs Téléphone doit être rempli</li>
 inscription.erreur.telephone.badFormat=<li>Les champs Téléphone ne doivent comporter que des chiffres</li>
 
 # --/jsp/vendeur.jsp
@@ -167,11 +167,11 @@ default.articleList=Liste des articles ->
 connect.title=Authentification
 connect.login=Login
 connect.password=Mot de passe
-connect.errors.loginVide=Login vide !
-connect.errors.passwordVide=Password vide !
+connect.errors.loginVide=<li>Le champ Login est obligatoire</li>
+connect.errors.passwordVide=<li>Le champ Password est obligatoire</li>
 
 # -- articleList.jsp --
-articleList.title=Liste des articles 2
+articleList.title=Liste des articles
 articleList.categorie.titre=Catégorie
 articleList.libelle=Libellé
 articleList.marque=Marque
@@ -206,20 +206,19 @@ articleEdit.dateLimite=Date Limite<br />(jj/mm/aaaa - hh:mm:ss)
 articleEdit.description=Description
 articleEdit.errors.articleNotSaved=L'article n'a pas été enregistré
 
-articleEdit.erreurs.libelleVide=<li>Le libellé est obligatoire.</li>
-articleEdit.erreurs.marqueVide=<li>La marque est obligatoire.</li>
-articleEdit.erreurs.dateLimiteVide=<li>La date limite est obligatoire.</li>
-articleEdit.erreurs.dateLimiteNonValide=<li>La date limite n'est pas valide. (jj/mm/aaaa - hh:mm:ss)</li>
-articleEdit.erreurs.modeleVide=<li>Le modèle est obligatoire.</li>
-articleEdit.erreurs.prixVenteVide=<li>Le prix de vente est obligatoire.</li>
-articleEdit.erreurs.anneeFabricationVide=<li>L'année de fabrication est obligatoire.</li>
-articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
-articleEdit.erreurs.prixVenteNonValide=<li>Le prix de vente n'est pas valide.</li>
-articleEdit.erreurs.anneeFabricationNonValide=<li>L'année de fabrication n'est pas valide.</li>
+articleEdit.erreurs.libelleVide=<li>Le champ Libellé est obligatoire.</li>
+articleEdit.erreurs.marqueVide=<li>Le champ Marque est obligatoire.</li>
+articleEdit.erreurs.dateLimiteVide=<li>Le champ Date limite est obligatoire.</li>
+articleEdit.erreurs.dateLimiteNonValide=<li>Le champ Date limite n'est pas valide. (jj/mm/aaaa - hh:mm:ss)</li>
+articleEdit.erreurs.modeleVide=<li>Le champ Modèle est obligatoire.</li>
+articleEdit.erreurs.prixVenteVide=<li>Le champ Prix de vente est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationVide=<li>Le champ Année de fabrication est obligatoire.</li>
+articleEdit.erreurs.anneeFabricationNonValide=<li>Le champ Année de fabrication n'est pas valide.</li>
+articleEdit.erreurs.prixVenteNonValide=<li>Le champ Prix de vente n'est pas valide.</li>
 
 # -- articleRetrait.jsp --
 articleRetrait.titre=Retrait d'article
-articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article
+articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article ?
 articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
 articleRetrait.erreurs.articleEnEnchere=Vous ne pouvez pas supprimer l'article, il y a des enchères dessus.
 articleRetrait.erreurs.articleVendu=Vous ne pouvez pas supprimer l'article, il est déjà vendu.
@@ -246,18 +245,6 @@ articleFiche.derniereEnchere.montant=Montant
 articleFiche.derniereEnchere.date=Date
 articleFiche.noEnchere=Auncune enchère
 articleFiche.dateDerniereEnchere=Date de la dernière enchère
-
-
-# -- articleAdd.jsp --
-articleAdd.title=Liste des articles 2
-articleAdd.libelle=Libellé
-articleAdd.marque=Marque
-articleAdd.modele=Modèle
-articleAdd.prixVente=Prix de Vente
-articleAdd.anneeFabrication=Année de Fabrication
-articleAdd.dateLimite=Date Limite(jj/mm/aaaa - hh:mm:ss)
-articleAdd.title=Ajout d'un article		
-
 
 # -- membreFiche.jsp --
 link.vendeurFiche=Afficher la fiche du vendeur
@@ -290,8 +277,8 @@ articleEnchereEdit.prixDepart=Prix de départ
 articleEnchereEdit.montant=Votre enchère
 articleEnchereEdit.erreurs.montantVide=Vous devez indiquer un montant pour l'enchère.
 articleEnchereEdit.erreurs.montantInvalide=Montant de l'enchère invalide.
-articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant > à la dernière enchère
-articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant > au prix de départ
+articleEnchereEdit.erreurs.montantInferieurADerniereEnchere=Vous devez indiquer un montant supérieur à la dernière enchère
+articleEnchereEdit.erreurs.montantInferieurAPrixDepart=Vous devez indiquer un montant supérieur au prix de départ
 articleEnchereEdit.erreurs.membreNonConnecte=Vous devez vous connecter pour poser des enchères.
 articleEnchereEdit.erreurs.articleNonEnVente=Malheureusement l'article n'est plus disponible à la vente. <br /> Votre enchère n'a pas été prise en compte. 
 articleEnchereEdit.link.articleFiche=Retour à l'article
