AXEL : 	Date par défaut lors de la création d'un article

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -210,6 +210,7 @@ articleEdit.erreurs.libelleVide=<li>Le champ Libellé est obligatoire.</li>
 articleEdit.erreurs.marqueVide=<li>Le champ Marque est obligatoire.</li>
 articleEdit.erreurs.dateLimiteVide=<li>Le champ Date limite est obligatoire.</li>
 articleEdit.erreurs.dateLimiteNonValide=<li>Le champ Date limite n'est pas valide. (jj/mm/aaaa - hh:mm:ss)</li>
+articleEdit.erreurs.dateLimiteTropPetite=<li>L'article doit être en vente pour au moins 1 jour </li>
 articleEdit.erreurs.modeleVide=<li>Le champ Modèle est obligatoire.</li>
 articleEdit.erreurs.prixVenteVide=<li>Le champ Prix de vente est obligatoire.</li>
 articleEdit.erreurs.anneeFabricationVide=<li>Le champ Année de fabrication est obligatoire.</li>
