*** empty log message ***

--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -98,7 +98,7 @@ vendeur.titre.infos=Informations Vendeur
 vendeur.titre.infosCB=Information carte bleue
 vendeur.label.numCB=Numéro
 vendeur.label.nomProprioCB=Nom du propriétaire
-vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaa)
+vendeur.label.dateExpirCB=Date d'expiration (jj/mm/aaaa)
 vendeur.label.codeSecuCB=Code sécurité
 vendeur.inscription.erreur.dateExpirCB.badFormat=<li>La date d'expiration de la CB doit être de la forme jj/mm/aaaa</li>
 vendeur.inscription.erreur.dateExpirCB.obligatoire=<li>Le champ Date d'expiration de la CB est obligatoire</li>
@@ -255,7 +255,7 @@ link.clientFiche=Afficher la fiche de l'acheteur
 membreFiche.title=Fiche Membre
 membreFiche.pseudo=Pseudo
 membreFiche.mesArticles=Articles en vente
-membreFiche.mesAvis=Les avis reçus
+membreFiche.mesAvis=Articles vendus
 
 # -- membreFiche.jsp --
 categorieList.title=Liste des Catégories
