--- a/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
+++ b/ezBayWeb/src/axlomoso/ezbay/struts/ressources/Application_fr.properties
@@ -219,7 +219,7 @@ articleEdit.erreurs.prixVenteNonValide=<li>Le champ Prix de vente n'est pas vali
 
 # -- articleRetrait.jsp --
 articleRetrait.titre=Retrait d'article
-articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article ?
+articleRetrait.messageConfirm=Voulez-vous vraiment supprimer l'article 
 articleRetrait.erreurs.articleEnVente=Vous ne pouvez pas supprimer l'article, il est encore en vente.
 articleRetrait.erreurs.articlePasEnVente=L'enchère est terminée vous ne pouvez pas enchérir
 articleRetrait.erreurs.articleEnEnchere=Vous ne pouvez pas supprimer l'article, il y a des enchères dessus.
